@@ -6,10 +6,10 @@ import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
 import co.elastic.clients.json.JsonData;
-import com.resumade.api.experience.domain.Experience;
-import com.resumade.api.experience.domain.ExperienceRepository;
 import com.resumade.api.experience.document.ExperienceDocument;
 import com.resumade.api.experience.document.ExperienceDocumentRepository;
+import com.resumade.api.experience.domain.Experience;
+import com.resumade.api.experience.domain.ExperienceRepository;
 import com.resumade.api.workspace.dto.ExperienceContextResponse;
 import dev.langchain4j.data.embedding.Embedding;
 import dev.langchain4j.model.embedding.EmbeddingModel;
@@ -21,8 +21,21 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.io.IOException;
-import java.util.*;
-import java.util.function.Function;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collection;
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.LinkedHashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -33,6 +46,17 @@ public class ExperienceVectorRetrievalService {
     private static final String INDEX_NAME = "experience-docs";
     private static final int DEFAULT_LIMIT = 3;
     private static final int MAX_SNIPPET_LENGTH = 400;
+    private static final int MAX_QUERY_VARIANTS = 4;
+    private static final int VECTOR_FETCH_MULTIPLIER = 4;
+    private static final Pattern TOKEN_PATTERN = Pattern.compile("[\\p{IsAlphabetic}\\p{IsDigit}\\u3131-\\u318E\\uAC00-\\uD7A3+#._-]+");
+    private static final Set<String> STOPWORDS = Set.of(
+            "the", "and", "for", "with", "from", "that", "this", "your", "into", "self", "intro", "introduction",
+            "resume", "question", "company", "position", "role", "experience", "project", "draft", "paragraph",
+            "focus", "tone", "keep", "avoid", "more", "detail", "details", "specific", "specificity", "structure",
+            "문항", "질문", "답변", "자소서", "자기소개서", "지원", "회사", "기업", "직무", "경험", "프로젝트", "역량", "강점",
+            "성과", "협업", "내용", "문단", "구조", "수정", "보완", "추가", "요청", "디테일", "구체", "구체화", "강조", "중심",
+            "기반", "통해", "위해", "대한", "관련", "있는", "있습니다", "입니다", "했다", "했습니다", "과정", "부분", "사례"
+    );
 
     private final ExperienceRepository experienceRepository;
     private final ExperienceDocumentRepository documentRepository;
@@ -41,34 +65,156 @@ public class ExperienceVectorRetrievalService {
     @Value("${openai.api.key:demo}")
     private String openAiApiKey;
 
+    private volatile EmbeddingModel embeddingModel;
+
     @Transactional(readOnly = true)
     public List<ExperienceContextResponse.ContextItem> search(String query, int limit) {
-        return search(query, limit, Collections.emptySet());
+        return search(query, limit, Collections.emptySet(), Collections.emptyList());
+    }
+
+    @Transactional(readOnly = true)
+    public List<ExperienceContextResponse.ContextItem> search(String query, int limit, Set<Long> excludedExperienceIds) {
+        return search(query, limit, excludedExperienceIds, Collections.emptyList());
     }
 
     @Transactional(readOnly = true)
     public List<ExperienceContextResponse.ContextItem> search(
-            String query, int limit, Set<Long> excludedExperienceIds) {
-        if (query == null || query.isBlank()) {
+            String query,
+            int limit,
+            Set<Long> excludedExperienceIds,
+            List<String> supportingQueries
+    ) {
+        List<WeightedQuery> weightedQueries = buildWeightedQueries(query, supportingQueries);
+        if (weightedQueries.isEmpty()) {
             return Collections.emptyList();
         }
 
         int effectiveLimit = Math.max(limit, DEFAULT_LIMIT);
-        float[] vector = computeEmbedding(query);
+        Map<Long, Experience> experienceMap = loadAvailableExperiences(excludedExperienceIds);
+        if (experienceMap.isEmpty()) {
+            return Collections.emptyList();
+        }
 
-        if (vector != null && hasIndexedDocuments()) {
-            try {
-                List<ExperienceContextResponse.ContextItem> vectorResults =
-                        runVectorSearch(vector, effectiveLimit, excludedExperienceIds);
-                if (!vectorResults.isEmpty()) {
-                    return vectorResults;
+        Map<Long, RankedCandidate> ranked = new LinkedHashMap<>();
+
+        if (hasIndexedDocuments()) {
+            for (WeightedQuery weightedQuery : weightedQueries) {
+                float[] vector = computeEmbedding(weightedQuery.text());
+                if (vector == null) {
+                    continue;
                 }
-            } catch (Exception e) {
-                log.warn("Vector search failed, falling back to keyword scoring", e);
+
+                try {
+                    List<Hit<ExperienceDocument>> hits = runVectorSearch(
+                            vector,
+                            Math.max(effectiveLimit * VECTOR_FETCH_MULTIPLIER, DEFAULT_LIMIT * VECTOR_FETCH_MULTIPLIER),
+                            excludedExperienceIds
+                    );
+                    mergeVectorCandidates(ranked, hits, experienceMap, weightedQuery);
+                } catch (Exception e) {
+                    log.warn("Vector search failed for retrieval query variant. Falling back to hybrid keyword scoring.", e);
+                }
             }
         }
 
-        return fallbackScore(query, effectiveLimit, excludedExperienceIds);
+        mergeKeywordCandidates(ranked, experienceMap.values(), weightedQueries);
+
+        return ranked.values().stream()
+                .filter(RankedCandidate::hasSignal)
+                .sorted(Comparator
+                        .comparingDouble(RankedCandidate::finalScore)
+                        .reversed()
+                        .thenComparing(candidate -> safeText(candidate.experience().getTitle())))
+                .limit(effectiveLimit)
+                .map(this::toContextItem)
+                .collect(Collectors.toList());
+    }
+
+    private Map<Long, Experience> loadAvailableExperiences(Set<Long> excludedExperienceIds) {
+        return experienceRepository.findAll().stream()
+                .filter(Objects::nonNull)
+                .filter(experience -> !isExcluded(experience.getId(), excludedExperienceIds))
+                .collect(Collectors.toMap(
+                        Experience::getId,
+                        experience -> experience,
+                        (left, right) -> left,
+                        LinkedHashMap::new
+                ));
+    }
+
+    private void mergeVectorCandidates(
+            Map<Long, RankedCandidate> ranked,
+            List<Hit<ExperienceDocument>> hits,
+            Map<Long, Experience> experienceMap,
+            WeightedQuery weightedQuery
+    ) {
+        for (Hit<ExperienceDocument> hit : hits) {
+            if (hit == null || hit.source() == null) {
+                continue;
+            }
+
+            ExperienceDocument document = hit.source();
+            Long experienceId = document.getExperienceId();
+            Experience experience = experienceMap.get(experienceId);
+            if (experience == null) {
+                continue;
+            }
+
+            RankedCandidate candidate = ranked.computeIfAbsent(
+                    experienceId,
+                    ignored -> new RankedCandidate(experienceId, experience)
+            );
+            candidate.mergeVectorScore(normalizeVectorScore(hit.score()) * weightedQuery.weight(), document.getChunkText());
+        }
+    }
+
+    private void mergeKeywordCandidates(
+            Map<Long, RankedCandidate> ranked,
+            Collection<Experience> experiences,
+            List<WeightedQuery> weightedQueries
+    ) {
+        for (Experience experience : experiences) {
+            if (experience == null) {
+                continue;
+            }
+
+            double keywordScore = calculateKeywordScore(experience, weightedQueries);
+            if (keywordScore <= 0) {
+                continue;
+            }
+
+            RankedCandidate candidate = ranked.computeIfAbsent(
+                    experience.getId(),
+                    ignored -> new RankedCandidate(experience.getId(), experience)
+            );
+            candidate.mergeKeywordScore(keywordScore);
+        }
+    }
+
+    private List<WeightedQuery> buildWeightedQueries(String primaryQuery, List<String> supportingQueries) {
+        LinkedHashMap<String, Double> deduplicated = new LinkedHashMap<>();
+        addWeightedQuery(deduplicated, primaryQuery, 1.0);
+
+        if (supportingQueries != null) {
+            for (String supportingQuery : supportingQueries) {
+                addWeightedQuery(deduplicated, supportingQuery, 0.78);
+            }
+        }
+
+        return deduplicated.entrySet().stream()
+                .limit(MAX_QUERY_VARIANTS)
+                .map(entry -> new WeightedQuery(entry.getKey(), entry.getValue()))
+                .collect(Collectors.toList());
+    }
+
+    private void addWeightedQuery(Map<String, Double> target, String rawQuery, double weight) {
+        String normalized = safeText(rawQuery).replaceAll("\\s+", " ").trim();
+        if (normalized.isBlank()) {
+            return;
+        }
+
+        String comparable = normalized.toLowerCase(Locale.ROOT);
+        target.merge(comparable, weight, Math::max);
     }
 
     private boolean hasIndexedDocuments() {
@@ -87,11 +233,7 @@ public class ExperienceVectorRetrievalService {
         }
 
         try {
-            EmbeddingModel model = OpenAiEmbeddingModel.builder()
-                    .apiKey(openAiApiKey)
-                    .modelName("text-embedding-3-small")
-                    .build();
-            Embedding embedding = model.embed(text).content();
+            Embedding embedding = getEmbeddingModel().embed(text).content();
             return embedding.vector();
         } catch (Exception e) {
             log.warn("Failed to compute embedding for query, falling back to keyword scoring", e);
@@ -99,19 +241,39 @@ public class ExperienceVectorRetrievalService {
         }
     }
 
-    private List<ExperienceContextResponse.ContextItem> runVectorSearch(
-            float[] vector, int limit, Set<Long> excludedExperienceIds) {
+    private EmbeddingModel getEmbeddingModel() {
+        EmbeddingModel current = embeddingModel;
+        if (current != null) {
+            return current;
+        }
+
+        synchronized (this) {
+            if (embeddingModel == null) {
+                embeddingModel = OpenAiEmbeddingModel.builder()
+                        .apiKey(openAiApiKey)
+                        .modelName("text-embedding-3-small")
+                        .build();
+            }
+            return embeddingModel;
+        }
+    }
+
+    private List<Hit<ExperienceDocument>> runVectorSearch(
+            float[] vector,
+            int fetchLimit,
+            Set<Long> excludedExperienceIds
+    ) {
         List<Float> vectorValues = toVectorList(vector);
 
         Script script = Script.of(s -> s
                 .source("cosineSimilarity(params.query_vector, 'embedding') + 1.0")
-                .params(Collections.singletonMap("query_vector", JsonData.of(vectorValues))));
+                .params(Map.of("query_vector", JsonData.of(vectorValues))));
 
-        int fetchLimit = limit + Math.max(0, excludedExperienceIds == null ? 0 : excludedExperienceIds.size());
+        int requestedSize = fetchLimit + Math.max(0, excludedExperienceIds == null ? 0 : excludedExperienceIds.size());
 
         SearchRequest request = SearchRequest.of(builder -> builder
                 .index(INDEX_NAME)
-                .size(Math.max(limit, fetchLimit))
+                .size(Math.max(fetchLimit, requestedSize))
                 .query(query -> query
                         .scriptScore(score -> score
                                 .query(inner -> inner.matchAll(match -> match))
@@ -125,10 +287,10 @@ public class ExperienceVectorRetrievalService {
         } catch (IOException e) {
             throw new IllegalStateException("Vector search request failed", e);
         }
-        List<Hit<ExperienceDocument>> filteredHits = response.hits().hits().stream()
+
+        return response.hits().hits().stream()
                 .filter(hit -> !isExcluded(hit, excludedExperienceIds))
                 .collect(Collectors.toList());
-        return mapHitsToContextItems(filteredHits, limit);
     }
 
     private boolean isExcluded(Hit<ExperienceDocument> hit, Set<Long> excludedExperienceIds) {
@@ -137,143 +299,213 @@ public class ExperienceVectorRetrievalService {
         }
         return Optional.ofNullable(hit.source())
                 .map(ExperienceDocument::getExperienceId)
-                .map(excludedExperienceIds::contains)
+                .map(experienceId -> isExcluded(experienceId, excludedExperienceIds))
                 .orElse(false);
     }
 
-    private List<ExperienceContextResponse.ContextItem> mapHitsToContextItems(
-            List<Hit<ExperienceDocument>> hits, int limit) {
-        if (hits == null || hits.isEmpty()) {
-            return Collections.emptyList();
-        }
-
-        List<Long> experienceIds = hits.stream()
-                .map(hit -> Optional.ofNullable(hit.source()).map(ExperienceDocument::getExperienceId).orElse(null))
-                .filter(Objects::nonNull)
-                .distinct()
-                .collect(Collectors.toList());
-
-        Map<Long, Experience> experienceMap = experienceRepository.findAllById(experienceIds).stream()
-                .collect(Collectors.toMap(Experience::getId, Function.identity()));
-
-        return hits.stream()
-                .map(hit -> toContextItem(hit, experienceMap))
-                .filter(Objects::nonNull)
-                .limit(limit)
-                .collect(Collectors.toList());
+    private boolean isExcluded(Long experienceId, Set<Long> excludedExperienceIds) {
+        return experienceId != null
+                && excludedExperienceIds != null
+                && !excludedExperienceIds.isEmpty()
+                && excludedExperienceIds.contains(experienceId);
     }
 
-    private ExperienceContextResponse.ContextItem toContextItem(
-            Hit<ExperienceDocument> hit, Map<Long, Experience> experienceMap) {
-        if (hit == null || hit.source() == null) {
-            return null;
-        }
-
-        ExperienceDocument document = hit.source();
-        Experience experience = experienceMap.get(document.getExperienceId());
-
-        String title = experience != null && experience.getTitle() != null
-                ? experience.getTitle()
-                : "Experience " + document.getExperienceId();
-        String chunk = Optional.ofNullable(document.getChunkText()).orElse("").trim();
-        int score = mapScore(hit.score());
-
-        return ExperienceContextResponse.ContextItem.builder()
-                .id("exp-" + document.getExperienceId() + "-chunk-" + document.getId())
-                .experienceTitle(title)
-                .relevantPart(truncate(chunk, MAX_SNIPPET_LENGTH))
-                .relevanceScore(score)
-                .build();
-    }
-
-    private List<ExperienceContextResponse.ContextItem> fallbackScore(
-            String query, int limit, Set<Long> excludedExperienceIds) {
-        String normalized = query.toLowerCase(Locale.ROOT);
-
-        return experienceRepository.findAll().stream()
-                .map(exp -> mapFallbackItem(exp, normalized))
-                .filter(Objects::nonNull)
-                .filter(item -> !isExcluded(item, excludedExperienceIds))
-                .sorted(Comparator.comparingInt(ExperienceContextResponse.ContextItem::getRelevanceScore).reversed())
-                .limit(limit)
-                .collect(Collectors.toList());
-    }
-
-    private ExperienceContextResponse.ContextItem mapFallbackItem(Experience experience, String normalizedQuery) {
-        if (experience == null) {
-            return null;
-        }
-
-        int score = calculateKeywordScore(experience, normalizedQuery);
-        if (score <= 0) {
-            return null;
-        }
-
-        String snippet = Optional.ofNullable(experience.getDescription())
-                .or(() -> Optional.ofNullable(experience.getRawContent()))
-                .or(() -> Optional.ofNullable(experience.getRole()))
-                .orElse("")
-                .trim();
-
-        return ExperienceContextResponse.ContextItem.builder()
-                .id("exp-" + experience.getId())
-                .experienceTitle(Optional.ofNullable(experience.getTitle()).orElse("Untitled Experience"))
-                .relevantPart(truncate(snippet, MAX_SNIPPET_LENGTH))
-                .relevanceScore(score)
-                .build();
-    }
-
-    private boolean isExcluded(ExperienceContextResponse.ContextItem item, Set<Long> excludedExperienceIds) {
-        if (excludedExperienceIds == null || excludedExperienceIds.isEmpty() || item == null) {
-            return false;
-        }
-
-        String id = item.getId();
-        if (id == null || !id.startsWith("exp-")) {
-            return false;
-        }
-
-        String[] parts = id.split("-");
-        if (parts.length < 2) {
-            return false;
-        }
-
-        try {
-            Long experienceId = Long.parseLong(parts[1]);
-            return excludedExperienceIds.contains(experienceId);
-        } catch (NumberFormatException e) {
-            return false;
-        }
-    }
-
-    private int calculateKeywordScore(Experience experience, String normalizedQuery) {
-        if (normalizedQuery == null || normalizedQuery.isBlank()) {
+    private double calculateKeywordScore(Experience experience, List<WeightedQuery> weightedQueries) {
+        if (weightedQueries == null || weightedQueries.isEmpty() || experience == null) {
             return 0;
         }
 
-        int score = 0;
-        String title = Optional.ofNullable(experience.getTitle()).orElse("").toLowerCase(Locale.ROOT);
-        String description = Optional.ofNullable(experience.getDescription()).orElse("").toLowerCase(Locale.ROOT);
-        String raw = Optional.ofNullable(experience.getRawContent()).orElse("").toLowerCase(Locale.ROOT);
+        double bestScore = 0;
+        Set<String> titleTokens = tokenize(experience.getTitle());
+        Set<String> categoryTokens = tokenize(experience.getCategory());
+        Set<String> descriptionTokens = tokenize(experience.getDescription());
+        Set<String> roleTokens = tokenize(experience.getRole());
+        Set<String> rawTokens = tokenize(experience.getRawContent());
+        Set<String> techStackTokens = tokenize(compactStructuredText(experience.getTechStack(), 240));
+        Set<String> metricsTokens = tokenize(compactStructuredText(experience.getMetrics(), 240));
+        Set<String> fileNameTokens = tokenize(experience.getOriginalFileName());
+        String normalizedCorpus = normalizeComparablePhrase(String.join(" ",
+                safeText(experience.getTitle()),
+                safeText(experience.getCategory()),
+                safeText(experience.getDescription()),
+                safeText(experience.getRole()),
+                safeText(experience.getRawContent()),
+                safeText(experience.getTechStack()),
+                safeText(experience.getMetrics()),
+                safeText(experience.getOriginalFileName())));
 
-        if (title.contains(normalizedQuery)) {
-            score += 50;
-        }
-        if (description.contains(normalizedQuery)) {
-            score += 30;
-        }
-        if (raw.contains(normalizedQuery)) {
-            score += 20;
+        for (WeightedQuery weightedQuery : weightedQueries) {
+            Set<String> queryTokens = tokenize(weightedQuery.text());
+            if (queryTokens.isEmpty()) {
+                continue;
+            }
+
+            double queryScore = 0;
+            queryScore += overlapScore(queryTokens, titleTokens, 36);
+            queryScore += overlapScore(queryTokens, roleTokens, 18);
+            queryScore += overlapScore(queryTokens, techStackTokens, 22);
+            queryScore += overlapScore(queryTokens, metricsTokens, 16);
+            queryScore += overlapScore(queryTokens, descriptionTokens, 24);
+            queryScore += overlapScore(queryTokens, rawTokens, 16);
+            queryScore += overlapScore(queryTokens, categoryTokens, 10);
+            queryScore += overlapScore(queryTokens, fileNameTokens, 8);
+
+            String normalizedQuery = normalizeComparablePhrase(weightedQuery.text());
+            if (!normalizedQuery.isBlank() && normalizedCorpus.contains(normalizedQuery)) {
+                queryScore += 12;
+            }
+
+            bestScore = Math.max(bestScore, queryScore * weightedQuery.weight());
         }
 
-        return Math.min(score, 99);
+        return Math.min(99, bestScore);
     }
 
-    private int mapScore(Double rawScore) {
+    private double overlapScore(Set<String> queryTokens, Set<String> fieldTokens, double weight) {
+        if (queryTokens == null || queryTokens.isEmpty() || fieldTokens == null || fieldTokens.isEmpty()) {
+            return 0;
+        }
+
+        long matches = queryTokens.stream()
+                .filter(fieldTokens::contains)
+                .count();
+        if (matches == 0) {
+            return 0;
+        }
+
+        double coverage = (double) matches / queryTokens.size();
+        double density = (double) matches / fieldTokens.size();
+        return weight * Math.min(1.0, coverage + (density * 0.35));
+    }
+
+    private Set<String> tokenize(String text) {
+        if (text == null || text.isBlank()) {
+            return Collections.emptySet();
+        }
+
+        LinkedHashSet<String> tokens = new LinkedHashSet<>();
+        Matcher matcher = TOKEN_PATTERN.matcher(text.toLowerCase(Locale.ROOT));
+        while (matcher.find()) {
+            String token = matcher.group();
+            if (token.length() < 2 || STOPWORDS.contains(token)) {
+                continue;
+            }
+            tokens.add(token);
+        }
+        return tokens;
+    }
+
+    private ExperienceContextResponse.ContextItem toContextItem(RankedCandidate candidate) {
+        Experience experience = candidate.experience();
+        String title = safeText(experience.getTitle());
+        if (title.isBlank()) {
+            title = "Untitled Experience";
+        }
+
+        return ExperienceContextResponse.ContextItem.builder()
+                .id("exp-" + candidate.experienceId())
+                .experienceTitle(title)
+                .relevantPart(buildRelevantPart(candidate))
+                .relevanceScore((int) Math.round(candidate.finalScore()))
+                .build();
+    }
+
+    private String buildRelevantPart(RankedCandidate candidate) {
+        Experience experience = candidate.experience();
+        List<String> segments = new ArrayList<>();
+
+        String role = safeText(experience.getRole());
+        String period = safeText(experience.getPeriod());
+        String rolePeriod = joinNonBlank(" | ",
+                role.isBlank() ? "" : "Role: " + role,
+                period.isBlank() ? "" : "Period: " + period);
+        if (!rolePeriod.isBlank()) {
+            segments.add(rolePeriod);
+        }
+
+        String techStack = compactStructuredText(experience.getTechStack(), 90);
+        if (!techStack.isBlank()) {
+            segments.add("Stack: " + techStack);
+        }
+
+        String metrics = compactStructuredText(experience.getMetrics(), 90);
+        if (!metrics.isBlank()) {
+            segments.add("Outcome: " + metrics);
+        }
+
+        String snippet = firstNonBlank(
+                candidate.bestChunk(),
+                experience.getDescription(),
+                experience.getRawContent(),
+                experience.getRole());
+        if (!snippet.isBlank()) {
+            segments.add("Relevant detail: " + truncate(cleanSnippet(snippet), 180));
+        }
+
+        return truncate(String.join(" | ", segments), MAX_SNIPPET_LENGTH);
+    }
+
+    private String compactStructuredText(String value, int maxLength) {
+        if (value == null || value.isBlank()) {
+            return "";
+        }
+
+        String normalized = value
+                .replaceAll("[\\[\\]{}\"]", "")
+                .replaceAll("\\s*:\\s*", ": ")
+                .replaceAll("\\s*,\\s*", ", ")
+                .replaceAll("\\s+", " ")
+                .trim();
+
+        return truncate(normalized, maxLength);
+    }
+
+    private String cleanSnippet(String value) {
+        if (value == null || value.isBlank()) {
+            return "";
+        }
+
+        return value.replaceAll("\\s+", " ").trim();
+    }
+
+    private String firstNonBlank(String... values) {
+        if (values == null) {
+            return "";
+        }
+
+        for (String value : values) {
+            if (value != null && !value.isBlank()) {
+                return value.trim();
+            }
+        }
+        return "";
+    }
+
+    private String joinNonBlank(String delimiter, String... values) {
+        return Arrays.stream(values)
+                .filter(Objects::nonNull)
+                .map(String::trim)
+                .filter(value -> !value.isBlank())
+                .collect(Collectors.joining(delimiter));
+    }
+
+    private double normalizeVectorScore(Double rawScore) {
         if (rawScore == null) {
             return 0;
         }
-        return Math.max(0, Math.min(99, Math.round(rawScore.floatValue() * 40)));
+        return Math.max(0, Math.min(99, (rawScore - 1.0d) * 100.0d));
+    }
+
+    private String normalizeComparablePhrase(String text) {
+        if (text == null || text.isBlank()) {
+            return "";
+        }
+        return text.toLowerCase(Locale.ROOT)
+                .replaceAll("[^\\p{IsAlphabetic}\\p{IsDigit}\\u3131-\\u318E\\uAC00-\\uD7A3]+", "");
+    }
+
+    private String safeText(String value) {
+        return value == null ? "" : value.trim();
     }
 
     private String truncate(String value, int maxLength) {
@@ -284,7 +516,7 @@ public class ExperienceVectorRetrievalService {
         if (value.length() <= maxLength) {
             return value;
         }
-        return value.substring(0, maxLength) + "...";
+        return value.substring(0, Math.max(0, maxLength - 3)) + "...";
     }
 
     private List<Float> toVectorList(float[] vector) {
@@ -293,5 +525,58 @@ public class ExperienceVectorRetrievalService {
             result.add(value);
         }
         return result;
+    }
+
+    private record WeightedQuery(String text, double weight) {
+    }
+
+    private static final class RankedCandidate {
+        private static final double HYBRID_VECTOR_WEIGHT = 0.62;
+        private static final double HYBRID_KEYWORD_WEIGHT = 0.38;
+
+        private final Long experienceId;
+        private final Experience experience;
+        private double vectorScore = 0;
+        private double keywordScore = 0;
+        private String bestChunk = "";
+
+        private RankedCandidate(Long experienceId, Experience experience) {
+            this.experienceId = experienceId;
+            this.experience = experience;
+        }
+
+        private Long experienceId() {
+            return experienceId;
+        }
+
+        private Experience experience() {
+            return experience;
+        }
+
+        private String bestChunk() {
+            return bestChunk;
+        }
+
+        private void mergeVectorScore(double score, String chunkText) {
+            if (score > vectorScore) {
+                vectorScore = score;
+                bestChunk = chunkText == null ? "" : chunkText.trim();
+            }
+        }
+
+        private void mergeKeywordScore(double score) {
+            keywordScore = Math.max(keywordScore, score);
+        }
+
+        private boolean hasSignal() {
+            return vectorScore > 0 || keywordScore > 0;
+        }
+
+        private double finalScore() {
+            if (vectorScore > 0 && keywordScore > 0) {
+                return Math.min(99, (vectorScore * HYBRID_VECTOR_WEIGHT) + (keywordScore * HYBRID_KEYWORD_WEIGHT) + 6);
+            }
+            return Math.min(99, Math.max(vectorScore, keywordScore));
+        }
     }
 }
